--- a/yyc_file/stock_analysis_yyc.ipynb
+++ b/yyc_file/stock_analysis_yyc.ipynb
@@ -2,7 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "initial_id",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-28T01:06:07.411757Z",
+     "start_time": "2023-10-28T01:06:00.948285Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#导入模块\n",
@@ -17,72 +24,19 @@
     "from ydata_profiling import * # 用于数据探索\n",
     "import datetime # 用于时间处理\n",
     "import time # 用于时间处理\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-22T09:07:21.223927Z",
-     "start_time": "2023-10-22T09:07:03.430753Z"
-    }
-   },
-   "id": "initial_id"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "login success!\n",
-      "login respond error_code:0\n",
-      "login respond  error_msg:success\n",
-      "query_history_k_data_plus respond error_code:0\n",
-      "query_history_k_data_plus respond  error_msg:success\n",
-      "            date       code     open     high      low    close preclose  \\\n",
-      "0     1991-01-29  sz.000002  14.5700  14.5800  14.5700  14.5800   1.0000   \n",
-      "1     1991-01-30  sz.000002  14.5100  14.5100  14.5100  14.5100  14.5800   \n",
-      "2     1991-01-31  sz.000002  14.5100  14.5100  14.5100  14.5100  14.5100   \n",
-      "3     1991-02-01  sz.000002  14.5100  14.5100  14.5100  14.5100  14.5100   \n",
-      "4     1991-02-04  sz.000002  14.6600  14.6600  14.6600  14.6600  14.5900   \n",
-      "...          ...        ...      ...      ...      ...      ...      ...   \n",
-      "7977  2023-09-22  sz.000002  13.2400  13.4100  13.2000  13.3900  13.2600   \n",
-      "7978  2023-09-25  sz.000002  13.3400  13.3500  13.1100  13.1400  13.3900   \n",
-      "7979  2023-09-26  sz.000002  13.1400  13.1900  13.0600  13.0700  13.1400   \n",
-      "7980  2023-09-27  sz.000002  13.0200  13.1400  13.0200  13.0500  13.0700   \n",
-      "7981  2023-09-28  sz.000002  13.0800  13.1200  13.0300  13.0800  13.0500   \n",
-      "\n",
-      "        volume          amount adjustflag      turn tradestatus       pctChg  \\\n",
-      "0         1500      21860.0000          3  0.005341           1  1358.000000   \n",
-      "1         8500     123335.0000          3  0.030264           1    -0.480108   \n",
-      "2            0          0.0000          3                     1     0.000000   \n",
-      "3            0          0.0000          3                     1     0.000000   \n",
-      "4        28000     410480.0000          3  0.099694           1     0.479779   \n",
-      "...        ...             ...        ...       ...         ...          ...   \n",
-      "7977  44356252  590420852.8700          3  0.456500           1     0.980400   \n",
-      "7978  46900034  617777509.4300          3  0.482700           1    -1.867100   \n",
-      "7979  32178243  421283755.9100          3  0.331200           1    -0.532700   \n",
-      "7980  39494333  515818311.0200          3  0.406500           1    -0.153000   \n",
-      "7981  30051321  392481526.3000          3  0.309300           1     0.229900   \n",
-      "\n",
-      "     isST  \n",
-      "0       0  \n",
-      "1       0  \n",
-      "2       0  \n",
-      "3       0  \n",
-      "4       0  \n",
-      "...   ...  \n",
-      "7977    0  \n",
-      "7978    0  \n",
-      "7979    0  \n",
-      "7980    0  \n",
-      "7981    0  \n",
-      "\n",
-      "[7982 rows x 14 columns]\n"
-     ]
+   "execution_count": null,
+   "id": "a46b4d49ced71117",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-28T01:06:14.587043Z",
+     "start_time": "2023-10-28T01:06:07.408558Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "#### 获取沪深A股历史K线数据 ####\n",
     "# 详细指标参数，参见“历史行情指标参数”章节；“分钟线”参数与“日线”参数不同。“分钟线”不包含指数。\n",
@@ -145,30 +99,19 @@
     "    print(result)\n",
     "    \n",
     "get_stock_data(start_date=\"1990-12-19\",end_date=\"2023-10-2\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-22T01:58:45.819027Z",
-     "start_time": "2023-10-22T01:58:44.869321Z"
-    }
-   },
-   "id": "a46b4d49ced71117"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                 code   open   high    low  close  preclose    volume  \\\ndate                                                                    \n1991-01-29  sz.000002  14.57  14.58  14.57  14.58      1.00      1500   \n1991-01-30  sz.000002  14.51  14.51  14.51  14.51     14.58      8500   \n1991-01-31  sz.000002  14.51  14.51  14.51  14.51     14.51         0   \n1991-02-01  sz.000002  14.51  14.51  14.51  14.51     14.51         0   \n1991-02-04  sz.000002  14.66  14.66  14.66  14.66     14.59     28000   \n...               ...    ...    ...    ...    ...       ...       ...   \n2023-09-22  sz.000002  13.24  13.41  13.20  13.39     13.26  44356252   \n2023-09-25  sz.000002  13.34  13.35  13.11  13.14     13.39  46900034   \n2023-09-26  sz.000002  13.14  13.19  13.06  13.07     13.14  32178243   \n2023-09-27  sz.000002  13.02  13.14  13.02  13.05     13.07  39494333   \n2023-09-28  sz.000002  13.08  13.12  13.03  13.08     13.05  30051321   \n\n                  amount  adjustflag      turn  tradestatus       pctChg  \\\ndate                                                                       \n1991-01-29  2.186000e+04           3  0.005341            1  1358.000000   \n1991-01-30  1.233350e+05           3  0.030264            1    -0.480108   \n1991-01-31  0.000000e+00           3       NaN            1     0.000000   \n1991-02-01  0.000000e+00           3       NaN            1     0.000000   \n1991-02-04  4.104800e+05           3  0.099694            1     0.479779   \n...                  ...         ...       ...          ...          ...   \n2023-09-22  5.904209e+08           3  0.456500            1     0.980400   \n2023-09-25  6.177775e+08           3  0.482700            1    -1.867100   \n2023-09-26  4.212838e+08           3  0.331200            1    -0.532700   \n2023-09-27  5.158183e+08           3  0.406500            1    -0.153000   \n2023-09-28  3.924815e+08           3  0.309300            1     0.229900   \n\n            isST   mean5  mean10   mean20     mean60    mean120   mean200  \ndate                                                                       \n1991-01-29     0     NaN     NaN      NaN        NaN        NaN       NaN  \n1991-01-30     0     NaN     NaN      NaN        NaN        NaN       NaN  \n1991-01-31     0     NaN     NaN      NaN        NaN        NaN       NaN  \n1991-02-01     0     NaN     NaN      NaN        NaN        NaN       NaN  \n1991-02-04     0  14.554     NaN      NaN        NaN        NaN       NaN  \n...          ...     ...     ...      ...        ...        ...       ...  \n2023-09-22     0  13.310  13.445  13.7295  14.111833  14.481500  15.77855  \n2023-09-25     0  13.276  13.389  13.6840  14.095000  14.464000  15.74925  \n2023-09-26     0  13.230  13.331  13.6275  14.079167  14.444500  15.72265  \n2023-09-27     0  13.182  13.274  13.5700  14.063833  14.427000  15.69330  \n2023-09-28     0  13.146  13.231  13.5420  14.049000  14.410667  15.66280  \n\n[7982 rows x 19 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>code</th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>preclose</th>\n      <th>volume</th>\n      <th>amount</th>\n      <th>adjustflag</th>\n      <th>turn</th>\n      <th>tradestatus</th>\n      <th>pctChg</th>\n      <th>isST</th>\n      <th>mean5</th>\n      <th>mean10</th>\n      <th>mean20</th>\n      <th>mean60</th>\n      <th>mean120</th>\n      <th>mean200</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1991-01-29</th>\n      <td>sz.000002</td>\n      <td>14.57</td>\n      <td>14.58</td>\n      <td>14.57</td>\n      <td>14.58</td>\n      <td>1.00</td>\n      <td>1500</td>\n      <td>2.186000e+04</td>\n      <td>3</td>\n      <td>0.005341</td>\n      <td>1</td>\n      <td>1358.000000</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1991-01-30</th>\n      <td>sz.000002</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>14.58</td>\n      <td>8500</td>\n      <td>1.233350e+05</td>\n      <td>3</td>\n      <td>0.030264</td>\n      <td>1</td>\n      <td>-0.480108</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1991-01-31</th>\n      <td>sz.000002</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>0</td>\n      <td>0.000000e+00</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1991-02-01</th>\n      <td>sz.000002</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>14.51</td>\n      <td>0</td>\n      <td>0.000000e+00</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1991-02-04</th>\n      <td>sz.000002</td>\n      <td>14.66</td>\n      <td>14.66</td>\n      <td>14.66</td>\n      <td>14.66</td>\n      <td>14.59</td>\n      <td>28000</td>\n      <td>4.104800e+05</td>\n      <td>3</td>\n      <td>0.099694</td>\n      <td>1</td>\n      <td>0.479779</td>\n      <td>0</td>\n      <td>14.554</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2023-09-22</th>\n      <td>sz.000002</td>\n      <td>13.24</td>\n      <td>13.41</td>\n      <td>13.20</td>\n      <td>13.39</td>\n      <td>13.26</td>\n      <td>44356252</td>\n      <td>5.904209e+08</td>\n      <td>3</td>\n      <td>0.456500</td>\n      <td>1</td>\n      <td>0.980400</td>\n      <td>0</td>\n      <td>13.310</td>\n      <td>13.445</td>\n      <td>13.7295</td>\n      <td>14.111833</td>\n      <td>14.481500</td>\n      <td>15.77855</td>\n    </tr>\n    <tr>\n      <th>2023-09-25</th>\n      <td>sz.000002</td>\n      <td>13.34</td>\n      <td>13.35</td>\n      <td>13.11</td>\n      <td>13.14</td>\n      <td>13.39</td>\n      <td>46900034</td>\n      <td>6.177775e+08</td>\n      <td>3</td>\n      <td>0.482700</td>\n      <td>1</td>\n      <td>-1.867100</td>\n      <td>0</td>\n      <td>13.276</td>\n      <td>13.389</td>\n      <td>13.6840</td>\n      <td>14.095000</td>\n      <td>14.464000</td>\n      <td>15.74925</td>\n    </tr>\n    <tr>\n      <th>2023-09-26</th>\n      <td>sz.000002</td>\n      <td>13.14</td>\n      <td>13.19</td>\n      <td>13.06</td>\n      <td>13.07</td>\n      <td>13.14</td>\n      <td>32178243</td>\n      <td>4.212838e+08</td>\n      <td>3</td>\n      <td>0.331200</td>\n      <td>1</td>\n      <td>-0.532700</td>\n      <td>0</td>\n      <td>13.230</td>\n      <td>13.331</td>\n      <td>13.6275</td>\n      <td>14.079167</td>\n      <td>14.444500</td>\n      <td>15.72265</td>\n    </tr>\n    <tr>\n      <th>2023-09-27</th>\n      <td>sz.000002</td>\n      <td>13.02</td>\n      <td>13.14</td>\n      <td>13.02</td>\n      <td>13.05</td>\n      <td>13.07</td>\n      <td>39494333</td>\n      <td>5.158183e+08</td>\n      <td>3</td>\n      <td>0.406500</td>\n      <td>1</td>\n      <td>-0.153000</td>\n      <td>0</td>\n      <td>13.182</td>\n      <td>13.274</td>\n      <td>13.5700</td>\n      <td>14.063833</td>\n      <td>14.427000</td>\n      <td>15.69330</td>\n    </tr>\n    <tr>\n      <th>2023-09-28</th>\n      <td>sz.000002</td>\n      <td>13.08</td>\n      <td>13.12</td>\n      <td>13.03</td>\n      <td>13.08</td>\n      <td>13.05</td>\n      <td>30051321</td>\n      <td>3.924815e+08</td>\n      <td>3</td>\n      <td>0.309300</td>\n      <td>1</td>\n      <td>0.229900</td>\n      <td>0</td>\n      <td>13.146</td>\n      <td>13.231</td>\n      <td>13.5420</td>\n      <td>14.049000</td>\n      <td>14.410667</td>\n      <td>15.66280</td>\n    </tr>\n  </tbody>\n</table>\n<p>7982 rows × 19 columns</p>\n</div>"
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "id": "2530ed63d1359935",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-28T01:06:14.634167Z",
+     "start_time": "2023-10-28T01:06:14.585685Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "stock_dataframe = pd.read_csv(\".\\history_k_datasz.000002 f1990-12-19t2023-10-2.csv\")\n",
     "stock_dataframe['date'] = pd.to_datetime(stock_dataframe['date'])\n",
@@ -181,29 +124,28 @@
     "stock_dataframe['mean120'] = stock_dataframe.close.rolling(120).mean()\n",
     "stock_dataframe['mean200'] = stock_dataframe.close.rolling(200).mean()\n",
     "stock_dataframe"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-22T07:37:44.701330Z",
-     "start_time": "2023-10-22T07:37:44.608493Z"
-    }
-   },
-   "id": "2530ed63d1359935"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## 可视化显示股票收盘价"
-   ],
+   "id": "95c9864bcf84863e",
    "metadata": {
     "collapsed": false
    },
-   "id": "95c9864bcf84863e"
+   "source": [
+    "## 可视化显示股票收盘价"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6db38c23f33551b7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-28T01:06:15.199825Z",
+     "start_time": "2023-10-28T01:06:14.609764Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig_close = px.line(stock_dataframe, x=stock_dataframe.index, y=\"close\", \n",
@@ -215,15 +157,18 @@
     "                     dtick=7*24*60*60*1000,  \n",
     "                     tick0=\"1991-01-28\"))\n",
     "fig_close.show()\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6db38c23f33551b7"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5eb488c493fd7320",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-28T01:06:15.873298Z",
+     "start_time": "2023-10-28T01:06:15.091751Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig_candle =  go.Figure(data=[go.Candlestick(x=stock_dataframe.index, # 绘制蜡烛图\n",
@@ -241,21 +186,22 @@
     "fig_candle.update_layout(xaxis_range=[datetime.datetime(1990, 12, 19),\n",
     "                               datetime.datetime(1993, 12, 18)])\n",
     "fig_candle.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5eb488c493fd7320"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "id": "78a12127cf39522f",
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2023-10-28T01:06:15.874052Z",
+     "start_time": "2023-10-28T01:06:15.858897Z"
+    }
    },
-   "id": "78a12127cf39522f"
+   "outputs": [],
+   "source": [
+    "# 增加这段注释测试git filter"
+   ]
   }
  ],
  "metadata": {
