add a library 'pandas_ta' to requirements.txt as stock technical analysis tool.

--- a/yyc_file/stock_analysis_yyc.ipynb
+++ b/yyc_file/stock_analysis_yyc.ipynb
@@ -16,6 +16,7 @@
     "import  numpy as np # numpy 库用于矩阵运算\n",
     "import pandas as pd # pandas 库用于读取数据\n",
     "from   pandas import DataFrame\n",
+    "import pandas_ta as ta # pandas_ta 库用于指标计算\n",
     "import plotly # plotly 库用于绘制动态图形\n",
     "import plotly.express as px # plotly.express 库用于绘制动态图形\n",
     "import plotly.graph_objects as go # plotly.graph_objects 库用于绘制动态图形\n",
@@ -165,8 +166,8 @@
    "id": "5eb488c493fd7320",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-28T01:06:15.873298Z",
-     "start_time": "2023-10-28T01:06:15.091751Z"
+     "end_time": "2023-10-28T07:28:11.902405Z",
+     "start_time": "2023-10-28T07:28:10.445609Z"
     }
    },
    "outputs": [],
@@ -185,6 +186,7 @@
     "                               layout=go.Layout(title=f\"股票{stock_dataframe.code[0]}  K线图\",autosize=True))\n",
     "fig_candle.update_layout(xaxis_range=[datetime.datetime(1990, 12, 19),\n",
     "                               datetime.datetime(1993, 12, 18)])\n",
+    "fig_candle.update_yaxes(autorange=True)\n",
     "fig_candle.show()"
    ]
   },
@@ -194,13 +196,32 @@
    "id": "78a12127cf39522f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-28T01:06:15.874052Z",
-     "start_time": "2023-10-28T01:06:15.858897Z"
+     "end_time": "2023-10-28T01:46:39.298102Z",
+     "start_time": "2023-10-28T01:46:38.354785Z"
     }
    },
    "outputs": [],
    "source": [
-    "# 增加这段注释测试git filter"
+    "[x for x in map(lambda x: x ** 2, [1, 2, 3])]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c34cd6c5e5bfa10",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-28T01:48:21.673556Z",
+     "start_time": "2023-10-28T01:48:21.077724Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "list1 = []\n",
+    "for x in range(1,4):\n",
+    "    num1 = x ** 2\n",
+    "    list1.append(num1)\n",
+    "list1"
    ]
   }
  ],
